AM_CFLAGS =-I@top_srcdir@/extlib/atFunctions/include
AM_CFLAGS+=-I@top_srcdir@/extlib/cfitsio 

########### LIBRARIES #################

# Libraries that are installed in the 'lib' directory.
noinst_LTLIBRARIES=libatFunctions.la

# Sources:
libatFunctions_la_SOURCES=atAberration.c atAddVect.c atAngDistance.c	\
			  atAtTimeDToAtTime.c atAtTimeToAtTimeD.c	\
			  atAzEl.c atAzElSet.c atBrazil.c atConvPol.c	\
			  atCopyVect.c atCrossPts.c atCTime.c		\
			  atDecToRadian.c atDegToDec.c atDegToRA.c	\
			  atDivVect.c atEarthElev.c atEarthOccult.c	\
			  atEcliptic.c atEllipsoid.c atEulerToQuat.c	\
			  atEulerToRM.c atGeodcr.c atGeodesic.c		\
			  atGeodetic.c atGeodeticToGeographic.c		\
			  atGeographic.c atGeographicToGeodetic.c	\
			  atGeomag.c atGroundCoord.c atHXDBrazil.c	\
			  atInterpolateEuler.c atInterpolateQuat.c	\
			  atInvGeodetic.c atInvRotMat.c atInvVect.c	\
			  atJ2000B1950G.c atKepler.c atMissionTime.c	\
			  atMJDate.c atMJulian.c atMoon.c		\
			  atMulAddVect.c atMulVect.c atNorm.c		\
			  atNormVect.c atOrbPlane.c atParseDec.c	\
			  atParseRA.c atPathNum.c atPathNumUSC.c	\
			  atPlanet.c atPol60ToVect.c atPolDegToVect.c	\
			  atPolToVect.c atPrecessEuler.c		\
			  atPrecession.c atPrecessRM.c atQuatProd.c	\
			  atQuatToEuler.c atQuatToRM.c atRAToRadian.c	\
			  atReformatAtTime.c atRigidity.c		\
			  atRigidity2.c atRMCheck.c atRMProd.c		\
			  atRMToEuler.c atRMToQuat.c atRotEuler2.c	\
			  atRotPVect.c atRotVect.c atSAA.c atSaisa.c	\
			  atSatPos.c atScalProd.c atSetElement.c	\
			  atSetElement2.c atSetEuler.c atSetGeoRM.c	\
			  atSetRotMat.c atSetRotMatZX.c atSidereal.c	\
			  atSISBrazil.c atSpline.c atSplineD.c		\
			  atSTTBrazil.c atSubVect.c atSun.c		\
			  atVectProd.c atVectToPol.c atVectToPol60.c	\
			  atVectToPolDeg.c atElementTime3.c		\
			  atPathNum3.c atPathNumUSC3.c atSatPos3.c	\
			  atSetElement3.c f2c.h

